Now able to update the Pokemon of a specific Encounter
